chore: add nvmf parameters
